# scalead-k8s

./: .gitignore  README.md  SCORING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
autoscaling_advisor/: __init__.py  auditor.py  cli.py  engine.py  models.py  renderer.py  scanner.py
docs/: cli-architecture.md  cli-presentation-guide.md
samples/: sample_use.txt  values-cpu-heavy.yaml  values-ideal.yaml  values-kafka-consumer.yaml  values-metrics-api.yaml  values-no-hpa.yaml  values-resource-poor.yaml  values-shutdown-risk.yaml  values-tuning-needed.yaml
samples/apps/api-with-metrics/: app.py
samples/apps/celery-worker/: worker.py
samples/apps/cpu-heavy/: app.py
samples/apps/kafka-consumer/: consumer.py
samples/k8s-demo/: deployment.yaml  hpa.yaml  pdb.yaml
